--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				<div class="surprise-container">
 					<h1>One last surprise</h1>
 					<p class="subheading">Some beautiful flowers for you</p>
-					<a href="flowerforsaira.enjoyxd.eu.org" class="gradient-button">Here is the garden.</a>
+					<a href="https://flowerforsaira.enjoyxd.eu.org/"" class="gradient-button">Here is the garden.</a>
 					<p class="instruction">Don't forget to tap the screen once you're in the garden.</p>
 				</div>
 
